# mdpkg

./: .gitignore  LICENSE  README.MD  README.md  setup.cfg  setup.py
mdpkg/: __init__.py  setup.py  test.py
mdpkg/correlation/: correlate.py
mdpkg/grid/: __init__.py  _grid.py  _gridSurf.py  _gridz.py  grid.py
mdpkg/misc/: makegif.py  max_d.py  run.py
mdpkg/rwfile/: __init__.py  _readLammps.py  _readdat.py  _write.py  resultsdir.py
