[metadata]
name = mdpkg
version = 0.0.1
author = Luís H. Carnevale
author_email = lh.carnevale@gmail.com
description = For Molecular Dynamics analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luishcc/mdpkg
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.7
include_package_data = True
